--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^3.3.7",
     "file-loader": "^0.11.2",
+    "history": "^4.7.2",
     "jquery": "^3.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.1",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0"
   },
@@ -33,6 +35,7 @@
     "babel-loader": "^7.1.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.5.2",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.4.1",
